--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  background: #000;
+  color: #fff;
+  font-family: "Poppins", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  scroll-behavior: smooth;
+}
+
+section {
+  padding-top: 60px;
+}
+
+.margin-bottom li:last-child {
+  margin-bottom: 0 !important;
+}
+
+#main-nav .active {
+  border-bottom: 2px solid white;
+}
+
+.navbar {
+  opacity: 0.8;
+}
+
+#home-section {
+  padding-top: 80px;
+  width: 100%;
+}
+
+#home-section .label {
+  padding: 8px 25px;
+  background-color: #007bff;
+  border-radius: 20px;
+  border-bottom-left-radius: 0;
+}
+
+#aboutme-section span,
+#experience-section .tech-used span {
+  padding: 0.25rem 0.5rem;
+  border: 1px solid#007bff;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  border-radius: 0.2rem;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  display: inline-block;
+  margin: 5px;
+}
+
+.bar {
+  list-style: none;
+}
+
+.bar > li {
+  position: relative;
+}
+
+.bar > li::before {
+  content: "\25CF";
+  position: absolute;
+  top: -5px;
+  left: -19px;
+  color: #007bff;
+}
+
+.bar > li::after {
+  content: "";
+  border-left: 1px dashed #007bff;
+  position: absolute;
+  top: 5px;
+  left: -15.1px;
+  height: 90%;
 }
