--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,28 @@ html {
   scroll-behavior: smooth;
 }
 
+#logo {
+  stroke: #007bff;
+  stroke-width: 2;
+}
+
+#logo path:nth-child(1) {
+  stroke-dasharray: 210;
+  stroke-dashoffset: 210;
+  animation: logo 1.5s ease forwards;
+}
+#logo path:nth-child(2) {
+  stroke-dasharray: 148;
+  stroke-dashoffset: 148;
+  animation: logo 1.5s ease forwards 1s;
+}
+
+@keyframes logo {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
 section {
   padding-top: 60px;
 }
@@ -28,7 +50,7 @@ section {
 }
 
 #home-section {
-  padding-top: 80px;
+  padding-top: 90px;
   width: 100%;
 }
 
